[gd_scene load_steps=2 format=3 uid="uid://dek28a3s0yeyf"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_lnuqy"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_lnuqy")

[node name="Start" type="Button" parent="."]
offset_left = 66.0
offset_top = 33.0
offset_right = 112.0
offset_bottom = 64.0
text = "Start"

[node name="Settings" type="Button" parent="."]
offset_left = 55.0
offset_top = 75.0
offset_right = 125.0
offset_bottom = 106.0
text = "Settings"

[node name="Exit" type="Button" parent="."]
offset_left = 73.0
offset_top = 120.0
offset_right = 110.0
offset_bottom = 151.0
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 324)

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
